--- a/CTFd/themes/translate/templates/scoreboard.html
+++ b/CTFd/themes/translate/templates/scoreboard.html
@@ -22,9 +22,9 @@
 			<table class="table table-striped">
 				<thead>
 					<tr>
-						<td scope="col" width="10px"><b>Place</b></td>
-						<td scope="col"><b>Team</b></td>
-						<td scope="col"><b>Score</b></td>
+						<td scope="col" width="10px"><b>Место</b></td>
+						<td scope="col"><b>Команда</b></td>
+						<td scope="col"><b>Очки</b></td>
 					</tr>
 				</thead>
 				<tbody>
