--- a/CTFd/themes/translate/templates/reset_password.html
+++ b/CTFd/themes/translate/templates/reset_password.html
@@ -19,7 +19,7 @@
 				<form method="post" accept-charset="utf-8" autocomplete="off" role="form" class="form-horizontal">
 					<div class="row">
 						<div class="col-md-12">
-							<p>You can now reset the password for your account and log in. Please enter in a new password below.</p>
+							<p>Вы можете сбросить пароль для своей учетной записи и войти в систему. Введите новый пароль.</p>
 						</div>
 					</div>
 					<div class="form-group">
@@ -39,7 +39,7 @@
 				<form method="post" accept-charset="utf-8" autocomplete="off" role="form" class="form-horizontal">
 					<div class="row">
 						<div class="col-md-12">
-							<p>Please provide the email address associated with your account below.</p>
+							<p>Укажите адрес электронной почты, связанный с вашей учетной записью.</p>
 						</div>
 					</div>
 					<div class="form-group">
