--- a/CTFd/themes/translate/templates/register.html
+++ b/CTFd/themes/translate/templates/register.html
@@ -16,7 +16,7 @@
 
 			{% if integrations.mlc() %}
 			<a class="btn btn-secondary btn-lg btn-block" href="{{ url_for('auth.oauth_login') }}">
-				Login with Major League Cyber
+				Вход
 			</a>
 
 			<hr>
@@ -29,21 +29,21 @@
 					<b>{{ form.name.label }}</b>
 					{{ form.name(class="form-control", value=name) }}
 					<small class="form-text text-muted">
-						Your username on the site
+						Ваше имя пользователя на сайте
 					</small>
 				</div>
 				<div class="form-group">
 					<b>{{ form.email.label }}</b>
 					{{ form.email(class="form-control", value=email) }}
 					<small class="form-text text-muted">
-						Never shown to the public
+						Не будет виден никому 
 					</small>
 				</div>
 				<div class="form-group">
 					<b>{{ form.password.label }}</b>
 					{{ form.password(class="form-control", value=password) }}
 					<small class="form-text text-muted">
-						Password used to log into your account
+						Пароль, используемый для входа в вашу учетную запись
 					</small>
 				</div>
 				{{ form.nonce() }}
@@ -60,7 +60,7 @@
 				<div class="row pt-3">
 					<div class="col-md-12 text-center">
 						<small class="text-muted text-center">
-							By registering, you agree to the
+							Регистрируясь, вы соглашаетесь с
 							<a href="{{ Configs.privacy_link }}" rel="noopener" target="_blank">privacy policy</a>
 							and <a href="{{ Configs.tos_link }}" rel="noopener" target="_blank">terms of service</a>
 						</small>
