--- a/CTFd/themes/translate/templates/settings.html
+++ b/CTFd/themes/translate/templates/settings.html
@@ -6,15 +6,15 @@
 {% block content %}
 <div class="jumbotron">
 	<div class="container">
-		<h1>Settings</h1>
+		<h1>Настройки</h1>
 	</div>
 </div>
 <div class="container">
 	<div class="row">
 		<div class="col-md-2 offset-md-1">
 			<div class="nav flex-column nav-pills" role="tablist">
-				<a class="nav-link active" id="settings-profile-tab" data-toggle="pill" href="#profile" role="tab">Profile</a>
-				<a class="nav-link" id="settings-tokens-tab" data-toggle="pill" href="#tokens" role="tab">Access Tokens</a>
+				<a class="nav-link active" id="settings-profile-tab" data-toggle="pill" href="#profile" role="tab">Профиль</a>
+				<a class="nav-link" id="settings-tokens-tab" data-toggle="pill" href="#tokens" role="tab">Токены доступа</a>
 			</div>
 		</div>
 		<div class="col-md-8">
@@ -94,10 +94,10 @@
 					<table class="table table-striped">
 						<thead>
 							<tr>
-								<td class="text-center"><b>Type</b></td>
-								<td class="text-center"><b>Created</b></td>
-								<td class="text-center"><b>Expiration</b></td>
-								<td class="text-center"><b>Delete</b></td>
+								<td class="text-center"><b>Тип</b></td>
+								<td class="text-center"><b>Создано</b></td>
+								<td class="text-center"><b>Срок действия</b></td>
+								<td class="text-center"><b>Удалить</b></td>
 							</tr>
 						</thead>
 						<tbody>
