--- a/CTFd/themes/translate/templates/components/navbar.html
+++ b/CTFd/themes/translate/templates/components/navbar.html
@@ -21,23 +21,23 @@
 
                 {% if Configs.account_visibility != 'admins' %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('users.listing') }}">Users</a>
+                        <a class="nav-link" href="{{ url_for('users.listing') }}">Пользователи</a>
                     </li>
                     {% if Configs.user_mode == 'teams' %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('teams.listing') }}">Teams</a>
+                        <a class="nav-link" href="{{ url_for('teams.listing') }}">Команды</a>
                     </li>
                     {% endif %}
                 {% endif %}
 
                 {% if Configs.score_visibility != 'admins' %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('scoreboard.listing') }}">Scoreboard</a>
+                        <a class="nav-link" href="{{ url_for('scoreboard.listing') }}">Табло</a>
                     </li>
                 {% endif %}
 
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('challenges.listing') }}">Challenges</a>
+                    <a class="nav-link" href="{{ url_for('challenges.listing') }}">Задания</a>
                 </li>
             </ul>
 
@@ -48,66 +48,66 @@
                     {% if is_admin() %}
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('admin.view') }}">
-                                <span class="d-block" data-toggle="tooltip" data-placement="bottom" title="Admin Panel">
+                                <span class="d-block" data-toggle="tooltip" data-placement="bottom" title="Панель админа">
                                     <i class="fas fa-wrench d-none d-md-block d-lg-none"></i>
                                 </span>
                                 <span class="d-sm-block d-md-none d-lg-block">
-                                    <i class="fas fa-wrench pr-1"></i>Admin Panel
+                                    <i class="fas fa-wrench pr-1"></i>Панель админа
                                 </span>
                             </a>
                         </li>
                     {% endif %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('views.notifications') }}">
-                            <span class="d-block" data-toggle="tooltip" data-placement="bottom" title="Notifications">
+                            <span class="d-block" data-toggle="tooltip" data-placement="bottom" title="Уведомления">
                                 <i class="fas fa-bell d-none d-md-block d-lg-none"></i>
                             </span>
                             <span class="d-sm-block d-md-none d-lg-block">
                                 <i class="fas fa-bell pr-1"></i>
                                 <span class="badge badge-pill badge-danger badge-notification"></span>
-                                Notifications
+                                Уведомления
                             </span>
                         </a>
                     </li>
                     {% if Configs.user_mode == "teams" %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('teams.private') }}">
-                            <span class="d-block" data-toggle="tooltip" data-placement="bottom" title="Team">
+                            <span class="d-block" data-toggle="tooltip" data-placement="bottom" title="Команды">
                                 <i class="fas fa-users d-none d-md-block d-lg-none"></i>
                             </span>
                             <span class="d-sm-block d-md-none d-lg-block">
-                                <i class="fas fa-users pr-1"></i>Team
+                                <i class="fas fa-users pr-1"></i>Команды
                             </span>
                         </a>
                     </li>
                     {% endif %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('users.private') }}">
-                            <span class="d-block" data-toggle="tooltip" data-placement="bottom" title="Profile">
+                            <span class="d-block" data-toggle="tooltip" data-placement="bottom" title="Профиль">
                                 <i class="fas fa-user-circle d-none d-md-block d-lg-none"></i>
                             </span>
                             <span class="d-sm-block d-md-none d-lg-block">
-                                <i class="fas fa-user-circle pr-1"></i>Profile
+                                <i class="fas fa-user-circle pr-1"></i>Профиль
                             </span>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('views.settings') }}">
-                            <span class="d-block" data-toggle="tooltip" data-placement="bottom" title="Settings">
+                            <span class="d-block" data-toggle="tooltip" data-placement="bottom" title="Настройки">
                                 <i class="fas fa-cogs d-none d-md-block d-lg-none"></i>
                             </span>
                             <span class="d-sm-block d-md-none d-lg-block">
-                                <i class="fas fa-cogs pr-1"></i>Settings
+                                <i class="fas fa-cogs pr-1"></i>Настройки
                             </span>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('auth.logout') }}">
-                            <span class="d-block" data-toggle="tooltip" data-placement="bottom" title="Logout">
+                            <span class="d-block" data-toggle="tooltip" data-placement="bottom" title="Выход">
                                 <i class="fas fa-sign-out-alt d-none d-md-block d-lg-none"></i>
                             </span>
                             <span class="d-sm-block d-md-none d-lg-block">
-                                <i class="fas fa-sign-out-alt pr-1"></i><span class="d-lg-none">Logout</span>
+                                <i class="fas fa-sign-out-alt pr-1"></i><span class="d-lg-none">Выход</span>
                             </span>
                         </a>
                     </li>
@@ -115,22 +115,22 @@
                     {% if registration_visible() %}
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('auth.register') }}">
-                                <span class="d-block" data-toggle="tooltip" data-placement="bottom" title="Register">
+                                <span class="d-block" data-toggle="tooltip" data-placement="bottom" title="Зарегистрироваться">
                                     <i class="fas fa-user-plus d-none d-md-block d-lg-none"></i>
                                 </span>
                                 <span class="d-sm-block d-md-none d-lg-block">
-                                    <i class="fas fa-user-plus pr-1"></i>Register
+                                    <i class="fas fa-user-plus pr-1"></i>Зарегистрироваться
                                 </span>
                             </a>
                         </li>
                     {% endif %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('auth.login') }}">
-                            <span class="d-block" data-toggle="tooltip" data-placement="bottom" title="Login">
+                            <span class="d-block" data-toggle="tooltip" data-placement="bottom" title="Вход">
                                 <i class="fas fa-sign-in-alt d-none d-md-block d-lg-none"></i>
                             </span>
                             <span class="d-sm-block d-md-none d-lg-block">
-                                <i class="fas fa-sign-in-alt pr-1"></i>Login
+                                <i class="fas fa-sign-in-alt pr-1"></i>Вход
                             </span>
                         </a>
                     </li>
