--- a/CTFd/themes/translate/templates/teams/new_team.html
+++ b/CTFd/themes/translate/templates/teams/new_team.html
@@ -6,7 +6,7 @@
 {% block content %}
 	<div class="jumbotron">
 		<div class="container">
-			<h1>Create Team</h1>
+			<h1>Создать команду</h1>
 		</div>
 	</div>
 	<div class="container">
@@ -30,7 +30,7 @@
 
 					<div class="row pt-3">
 						<div class="col-md-12">
-							<p>After creating your team, share the team name and password with your teammates so they can join your team.</p>
+							<p>После создания своей команды поделитесь названием и паролем команды с товарищами по команде, чтобы они могли присоединиться к вашей команде.</p>
 							{{ form.submit(class="btn btn-success float-right") }}
 						</div>
 					</div>
