--- a/CTFd/themes/translate/templates/teams/public.html
+++ b/CTFd/themes/translate/templates/teams/public.html
@@ -65,12 +65,12 @@
 
 		<div class="row">
 			<div class="col-md-12">
-				<h3>Members</h3>
+				<h3>Участники</h3>
 				<table class="table table-striped">
 					<thead>
 					<tr>
-						<td><b>User Name</b></td>
-						<td><b>Score</b></td>
+						<td><b>Имя участника</b></td>
+						<td><b>Очки</b></td>
 					</tr>
 					</thead>
 					<tbody>
@@ -120,7 +120,7 @@
 			{% if awards %}
 				<div class="row">
 					<div class="col-md-12">
-						<h3>Awards</h3>
+						<h3>Награды</h3>
 					</div>
 					{% for award in awards %}
 						<div class="col-md-3 col-sm-6">
@@ -141,14 +141,14 @@
 
 			<div class="row">
 				<div class="col-md-12">
-					<h3>Solves</h3>
+					<h3>Решения</h3>
 					<table class="table table-striped">
 						<thead>
 						<tr>
-							<td><b>Challenge</b></td>
-							<td class="d-none d-md-block d-lg-block"><b>Category</b></td>
-							<td><b>Value</b></td>
-							<td><b>Time</b></td>
+							<td><b>Задания</b></td>
+							<td class="d-none d-md-block d-lg-block"><b>Категория</b></td>
+							<td><b>Очки</b></td>
+							<td><b>Время</b></td>
 						</tr>
 						</thead>
 						<tbody>
@@ -173,7 +173,7 @@
 		{% else %}
 			<div class="row min-vh-25">
 				<h3 class="opacity-50 text-center w-100 justify-content-center align-self-center">
-					No solves yet
+					Пока решений нет
 				</h3>
 			</div>
 		{% endif %}
