--- a/CTFd/themes/translate/templates/teams/private.html
+++ b/CTFd/themes/translate/templates/teams/private.html
@@ -274,7 +274,7 @@
 						<tr>
 							<td><b>Задания</b></td>
 							<td class="d-none d-md-block d-lg-block"><b>Категория</b></td>
-							<td><b>Стоимость</b></td>
+							<td><b>Очки</b></td>
 							<td><b>Время</b></td>
 						</tr>
 						</thead>
