--- a/CTFd/themes/translate/templates/teams/teams.html
+++ b/CTFd/themes/translate/templates/teams/teams.html
@@ -48,7 +48,7 @@
 					<tr>
 						<td><b>Команда</b></td>
 						<td><b>Сайт</b></td>
-						<td class="d-none d-md-table-cell d-lg-table-cell"><b>Кто?Who?</b></td>
+						<td class="d-none d-md-table-cell d-lg-table-cell"><b>Учреждение</b></td>
 						<td class="d-none d-md-table-cell d-lg-table-cell"><b>Страна</b></td>
 					</tr>
 				</thead>
