--- a/CTFd/themes/translate/templates/challenge.html
+++ b/CTFd/themes/translate/templates/challenge.html
@@ -44,16 +44,16 @@
 									<a class="btn btn-info btn-hint btn-block load-hint" href="javascript:;" data-hint-id="{{ hint.id }}">
 										{% if hint.content %}
 											<small>
-												View Hint
+												Посмотреть подсказку
 											</small>
 										{% else %}
 											{% if hint.cost %}
 												<small>
-													Unlock Hint for {{ hint.cost }} points
+													Разблокировать подсказку за {{ hint.cost }} очков
 												</small>
 											{% else %}
 												<small>
-													View Hint
+													Посмотреть подсказку
 												</small>
 											{% endif %}
 										{% endif %}
