--- a/CTFd/themes/translate/templates/users/users.html
+++ b/CTFd/themes/translate/templates/users/users.html
@@ -6,7 +6,7 @@
 {% block content %}
 	<div class="jumbotron">
 		<div class="container">
-			<h1>Users</h1>
+			<h1>Пользователи</h1>
 		</div>
 	</div>
 	<div class="container">
@@ -14,10 +14,10 @@
 			<div class="col-md-12">
 				{% if q and field %}
 				<h5 class="text-muted text-center">
-					Searching for users with <strong>{{ field }}</strong> matching <strong>{{ q }}</strong>
+					Ищем пользователей с <strong>{{ q }}</strong> в поле <strong>{{ field }}</strong>
 				</h5>
 				<h6 class="text-muted text-center pb-3">
-					Page {{ users.page }} of {{ users.total }} results
+					Страница результатов {{ users.page }} of {{ users.total }} results
 				</h6>
 				{% endif %}
 
@@ -27,7 +27,7 @@
 						{{ form.field(class="form-control custom-select w-100") }}
 					</div>
 					<div class="form-group col-md-8">
-						{{ form.q(class="form-control w-100", placeholder="Search for matching users") }}
+						{{ form.q(class="form-control w-100", placeholder="Поиск подходящих пользователей") }}
 					</div>
 					<div class="form-group col-md-2">
 						<button type="submit" class="btn btn-primary w-100">
@@ -46,10 +46,10 @@
 				<table class="table table-striped">
 					<thead>
 					<tr>
-						<td><b>User</b></td>
-						<td><b>Website</b></td>
-						<td class="d-none d-md-table-cell d-lg-table-cell"><b>Affiliation</b></td>
-						<td class="d-none d-md-table-cell d-lg-table-cell"><b>Country</b></td>
+						<td><b>Пользователь</b></td>
+						<td><b>Сайт</b></td>
+						<td class="d-none d-md-table-cell d-lg-table-cell"><b>Учреждение</b></td>
+						<td class="d-none d-md-table-cell d-lg-table-cell"><b>Страна</b></td>
 					</tr>
 					</thead>
 					<tbody>
