--- a/CTFd/themes/translate/templates/users/public.html
+++ b/CTFd/themes/translate/templates/users/public.html
@@ -125,10 +125,10 @@
 					<table class="table table-striped">
 						<thead>
 						<tr>
-							<td><b>Challenge</b></td>
-							<td class="d-none d-md-block d-lg-block"><b>Category</b></td>
-							<td><b>Value</b></td>
-							<td><b>Time</b></td>
+							<td><b>Задания</b></td>
+							<td class="d-none d-md-block d-lg-block"><b>Категория</b></td>
+							<td><b>Очки</b></td>
+							<td><b>Время</b></td>
 						</tr>
 						</thead>
 						<tbody>
@@ -153,7 +153,7 @@
 		{% else %}
 			<div class="row min-vh-25">
 				<h3 class="opacity-50 text-center w-100 justify-content-center align-self-center">
-					No solves yet
+					Пока решений нет
 				</h3>
 			</div>
 		{% endif %}
