--- a/CTFd/themes/translate/templates/scoreboard.html
+++ b/CTFd/themes/translate/templates/scoreboard.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="jumbotron">
 	<div class="container">
-		<h1>Табло</h1>
+		<h1>Результаты</h1>
 	</div>
 </div>
 <div class="container">
