--- a/CTFd/themes/translate/templates/components/navbar.html
+++ b/CTFd/themes/translate/templates/components/navbar.html
@@ -32,7 +32,7 @@
 
                 {% if Configs.score_visibility != 'admins' %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('scoreboard.listing') }}">Табло</a>
+                        <a class="nav-link" href="{{ url_for('scoreboard.listing') }}">Результаты</a>
                     </li>
                 {% endif %}
 
