--- a/CTFd/themes/translate/templates/errors/429.html
+++ b/CTFd/themes/translate/templates/errors/429.html
@@ -8,8 +8,8 @@
 			<div class="pt-5 mt-5 text-center">
 				<h1>429</h1>
 				<hr class="w-50">
-				<h2>Too many requests</h2>
-				<h2>Please slow down!</h2>
+				<h2>Слишком много запросов</h2>
+				<h2>Помедленнее, пожалуйста!</h2>
 			</div>
 		</div>
 	</div>
