--- a/CTFd/themes/translate/templates/users/private.html
+++ b/CTFd/themes/translate/templates/users/private.html
@@ -121,7 +121,7 @@
 
 			<div class="row">
 				<div class="col-md-12">
-					<h3>Solves</h3>
+					<h3>Решения</h3>
 					<table class="table table-striped">
 						<thead>
 						<tr>
@@ -153,7 +153,7 @@
 		{% else %}
 			<div class="row min-vh-25">
 				<h3 class="opacity-50 text-center w-100 justify-content-center align-self-center">
-					No solves yet
+					Пока решений нет
 				</h3>
 			</div>
 		{% endif %}
