--- a/CTFd/themes/translate/templates/teams/team_enrollment.html
+++ b/CTFd/themes/translate/templates/teams/team_enrollment.html
@@ -12,7 +12,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6 offset-md-3 text-center">
-				<p>Welcome to {{ Configs.ctf_name }}!</p>
+				<p>Добро пожаловать на {{ Configs.ctf_name }}!</p>
 				<p>
 					Для участия вы должны либо присоединиться к команде, либо создать ее.
 				</p>
