--- a/CTFd/themes/translate/templates/teams/public.html
+++ b/CTFd/themes/translate/templates/teams/public.html
@@ -37,14 +37,14 @@
 				{% if scores_visible() %}
 					{% if place %}
 						{{ place }}
-						<small>place</small>
+						<small>место</small>
 					{% endif %}
 				{% endif %}
 			</h2>
 			<h2 id="team-score" class="text-center">
 				{% if score %}
 					{{ score }}
-					<small>points</small>
+					<small>очков</small>
 				{% endif %}
 			</h2>
 
