--- a/CTFd/themes/translate/templates/components/navbar.html
+++ b/CTFd/themes/translate/templates/components/navbar.html
@@ -72,11 +72,11 @@
                     {% if Configs.user_mode == "teams" %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('teams.private') }}">
-                            <span class="d-block" data-toggle="tooltip" data-placement="bottom" title="Команды">
+                            <span class="d-block" data-toggle="tooltip" data-placement="bottom" title="Команда">
                                 <i class="fas fa-users d-none d-md-block d-lg-none"></i>
                             </span>
                             <span class="d-sm-block d-md-none d-lg-block">
-                                <i class="fas fa-users pr-1"></i>Команды
+                                <i class="fas fa-users pr-1"></i>Команда
                             </span>
                         </a>
                     </li>
