--- a/CTFd/themes/translate/templates/challenge.html
+++ b/CTFd/themes/translate/templates/challenge.html
@@ -97,7 +97,7 @@
 							<div class="col-md-9 form-group">
 								{% block input %}
 									<input id="challenge-id" class="challenge-id" type="hidden" value="{{ challenge.id }}">
-									<input id="challenge-input" class="challenge-input" type="text" name="answer" placeholder="Flag"/>
+									<input id="challenge-input" class="challenge-input" type="text" name="answer" placeholder="Ответ"/>
 								{% endblock %}
 							</div>
 							<div class="col-md-3 form-group key-submit">
@@ -127,7 +127,7 @@
 									<tr>
 										<td><b>Название</b>
 										</td>
-										<td><b>Дата</b>
+										<td><b>Время</b>
 										</td>
 									</tr>
 									</thead>
