--- a/CTFd/themes/translate/templates/users/private.html
+++ b/CTFd/themes/translate/templates/users/private.html
@@ -101,7 +101,7 @@
 
 			<div class="row">
 				<div class="col-md-12">
-					<h3>Awards</h3>
+					<h3>Награды</h3>
 				</div>
 				{% for award in user.awards %}
 					<div class="col-md-3 col-sm-6">
@@ -125,10 +125,10 @@
 					<table class="table table-striped">
 						<thead>
 						<tr>
-							<td><b>Challenge</b></td>
-							<td class="d-none d-md-block d-lg-block"><b>Category</b></td>
-							<td><b>Value</b></td>
-							<td><b>Time</b></td>
+							<td><b>Задание</b></td>
+							<td class="d-none d-md-block d-lg-block"><b>Категория</b></td>
+							<td><b>Очки</b></td>
+							<td><b>Время</b></td>
 						</tr>
 						</thead>
 						<tbody>
