--- a/CTFd/themes/translate/templates/users/private.html
+++ b/CTFd/themes/translate/templates/users/private.html
@@ -48,12 +48,12 @@
 			<div>
 				<h2 class="text-center">
 					{% if account.place %}
-						{{ account.place }} <small>place</small>
+						{{ account.place }} <small>место</small>
 					{% endif %}
 				</h2>
 				<h2 class="text-center">
 					{% if account.place %}
-						{{ account.score }} <small>points</small>
+						{{ account.score }} <small>очков</small>
 					{% endif %}
 				</h2>
 			</div>
