--- a/CTFd/themes/translate/templates/users/public.html
+++ b/CTFd/themes/translate/templates/users/public.html
@@ -48,12 +48,12 @@
 			<div>
 				<h2 class="text-center">
 					{% if account.place %}
-						{{ account.place }} <small>place</small>
+						{{ account.place }} <small>место</small>
 					{% endif %}
 				</h2>
 				<h2 class="text-center">
 					{% if account.place %}
-						{{ account.score }} <small>points</small>
+						{{ account.score }} <small>очков</small>
 					{% endif %}
 				</h2>
 			</div>
@@ -101,7 +101,7 @@
 
 			<div class="row">
 				<div class="col-md-12">
-					<h3>Awards</h3>
+					<h3>Награды</h3>
 				</div>
 				{% for award in user.awards %}
 					<div class="col-md-3 col-sm-6">
@@ -121,7 +121,7 @@
 
 			<div class="row">
 				<div class="col-md-12">
-					<h3>Solves</h3>
+					<h3>Решения</h3>
 					<table class="table table-striped">
 						<thead>
 						<tr>
