--- a/CTFd/themes/translate/templates/reset_password.html
+++ b/CTFd/themes/translate/templates/reset_password.html
@@ -6,7 +6,7 @@
 {% block content %}
 <div class="jumbotron">
 	<div class="container">
-		<h1>Reset Password</h1>
+		<h1>Восстановление пароля</h1>
 	</div>
 </div>
 <div class="container">
