--- a/CTFd/themes/translate/templates/challenge.html
+++ b/CTFd/themes/translate/templates/challenge.html
@@ -87,7 +87,7 @@
 						<div class="row text-center">
 							<div class="col-md-12">
 								<p>
-									{{ attempts }}/{{ max_attempts }} попытка{{ attempts|pluralize(attempts) }}
+									{{ attempts }}/{{ max_attempts }} попытка
 								</p>
 							</div>
 						</div>
