--- a/CTFd/themes/translate/templates/users/users.html
+++ b/CTFd/themes/translate/templates/users/users.html
@@ -14,10 +14,10 @@
 			<div class="col-md-12">
 				{% if q and field %}
 				<h5 class="text-muted text-center">
-					Ищем пользователей с <strong>{{ q }}</strong> в поле <strong>{{ field }}</strong>
+					Ищем пользователей с <strong>{{ q }}</strong>
 				</h5>
 				<h6 class="text-muted text-center pb-3">
-					Страница результатов {{ users.page }} of {{ users.total }} results
+					Страница результатов {{ users.page }} из {{ users.total }} найденных совпадений
 				</h6>
 				{% endif %}
 
