--- a/CTFd/themes/translate/templates/teams/teams.html
+++ b/CTFd/themes/translate/templates/teams/teams.html
@@ -14,10 +14,10 @@
 		<div class="col-md-12">
 			{% if q and field %}
 			<h5 class="text-muted text-center">
-				Ищем команды с <strong>{{ q }}</strong> в поле <strong>{{ field }}</strong>
+				Ищем команды с <strong>{{ q }}</strong>
 			</h5>
 			<h6 class="text-muted text-center pb-3">
-				Страница результатов {{ teams.page }} из {{ teams.total }}
+				Страница результатов {{ teams.page }} из {{ teams.total }} найденных совпадений
 			</h6>
 			{% endif %}
 
