--- a/CTFd/themes/translate/templates/challenge.html
+++ b/CTFd/themes/translate/templates/challenge.html
@@ -12,7 +12,7 @@
 					<li class="nav-item">
 						<a class="nav-link challenge-solves" href="#solves">
 							{% if solves != None %}
-								{{ solves }} {% if solves > 1 %}Решений{% else %}Решений{% endif %}
+								Решений: {{ solves }}
 							{% endif %}
 						</a>
 					</li>
