Fixes for solves translation

--- a/CTFd/themes/translate/templates/challenge.html
+++ b/CTFd/themes/translate/templates/challenge.html
@@ -94,13 +94,13 @@
 						{% endif %}
 
 						<div class="row submit-row">
-							<div class="col-md-9 form-group">
+							<div class="col-md w-100 form-group">
 								{% block input %}
 									<input id="challenge-id" class="challenge-id" type="hidden" value="{{ challenge.id }}">
 									<input id="challenge-input" class="challenge-input" type="text" name="answer" placeholder="Ответ"/>
 								{% endblock %}
 							</div>
-							<div class="col-md-3 form-group key-submit">
+							<div class="col-md-auto form-group key-submit">
 								{% block submit %}
 								<button id="challenge-submit" class="challenge-submit" type="submit">
 									Подтвердить
