--- a/CTFd/themes/translate/templates/settings.html
+++ b/CTFd/themes/translate/templates/settings.html
@@ -14,6 +14,7 @@
 		<div class="col-md-2 offset-md-1">
 			<div class="nav flex-column nav-pills" role="tablist">
 				<a class="nav-link active" id="settings-profile-tab" data-toggle="pill" href="#profile" role="tab">Профиль</a>
+				<a class="nav-link" id="settings-tokens-tab" data-toggle="pill" href="#tokens" role="tab">Токены доступа</a>
 			</div>
 		</div>
 		<div class="col-md-8">
@@ -89,7 +90,7 @@
 
 					{% if tokens %}
 					<hr>
-					<h4 class="text-center">Active Tokens</h4>
+					<h4 class="text-center">Активные токены</h4>
 					<table class="table table-striped">
 						<thead>
 							<tr>
