--- a/CTFd/themes/translate/templates/challenge.html
+++ b/CTFd/themes/translate/templates/challenge.html
@@ -22,7 +22,7 @@
 				<div class="tab-content">
 					<div role="tabpanel" class="tab-pane fade show active" id="challenge">
 						<h2 class='challenge-name text-center pt-3'>
-							{{ challenge.name }}
+							{{ challenge.name|safe }}
 						</h2>
 						<h3 class="challenge-value text-center">
 							{{ challenge.value }}
