--- a/CTFd/themes/translate/templates/components/navbar.html
+++ b/CTFd/themes/translate/templates/components/navbar.html
@@ -43,7 +43,7 @@
 
             <hr class="d-sm-flex d-md-flex d-lg-none">
 
-            <ul class="navbar-nav ml-md-auto d-block d-sm-flex d-md-flex">
+            <ul class="navbar-nav ml-md-auto d-block d-sm-flex d-md-flex text-nowrap">
                 {% if authed() %}
                     {% if is_admin() %}
                         <li class="nav-item">
